// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Has default icons 1`] = `
<img
  alt="acronymCF"
  className="cfbutton pulse"
  onClick={[Function]}
  src="test-file-stub"
  title="CaptainFact"
/>
`;

exports[`Has default icons 2`] = `
<img
  alt="acronymCF"
  className="cfbutton pulse"
  onClick={[Function]}
  src="test-file-stub"
  title="CaptainFact"
/>
`;

exports[`Returns nothing if it has no video or statement 1`] = `""`;

exports[`Returns nothing if it has no video or statement 2`] = `""`;

exports[`approve icon if approve 1`] = `
<img
  alt="acronymCF"
  className="cfbutton pulse"
  onClick={[Function]}
  src="approve-icon.jpg"
  title="CaptainFact"
/>
`;

exports[`neutral icon if unsure 1`] = `
<img
  alt="acronymCF"
  className="cfbutton pulse"
  onClick={[Function]}
  src="neutral-icon.jpg"
  title="CaptainFact"
/>
`;

exports[`refute icon if refute 1`] = `
<img
  alt="acronymCF"
  className="cfbutton pulse"
  onClick={[Function]}
  src="refute-icon.jpg"
  title="CaptainFact"
/>
`;
